tests/snapshots/examples_guide/arithmetic.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
