tests/snapshots/examples_guide/array_builtins.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/array_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
