tests/snapshots/examples_guide/array_hash_combo.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/array_hash_combo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
