tests/snapshots/examples_guide/array_iteration.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/array_iteration.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
