tests/snapshots/examples_guide/arrays_basic.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/arrays_basic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
