tests/snapshots/examples_guide/bug_strings.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/bug_strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
