tests/snapshots/examples_guide/comments.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/comments.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
