tests/snapshots/examples_guide/comments_nested.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/comments_nested.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
