tests/snapshots/examples_guide/comparison.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/comparison.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
