tests/snapshots/examples_guide/complex_expr.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/complex_expr.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
