tests/snapshots/examples_guide/contact_book.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/contact_book.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
