tests/snapshots/examples_guide/diagnostic_comment_trim.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/diagnostic_comment_trim.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
